Fix style identation and spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,22 +9,25 @@ img {
 	border: 1px solid #9f9f9f;
 	box-sizing: border-box;
 }
+
 ul {
 	padding-left: 0;
 }
+
 li {
 	font-size: 12px;
 	list-style: none;
 }
+
 li span {
 	font-weight: bold;
-
 }
 
 h3 {
 	margin: 0 0 15px;
 	font-size: 16px;
 }
+
 p {
 	margin: 0;
 	font-size: 12px;
@@ -38,9 +41,9 @@ p {
 	background-image: url("../img/background.jpg");
 	background-size: cover;
 	border: 1px solid #9f9f9f;
-	border-radius: 30px;
-	
+	border-radius: 30px;	
 }
+
 .details {
 	border: 1px solid #9f9f9f;
 	padding: 15px;
@@ -52,4 +55,8 @@ p {
 .interesting-fact {
 	font-style: italic;
 	margin-top: 0;
+}
+
+.italic {
+	font-style: italic;
 }
